--- a/bio.html
+++ b/bio.html
@@ -67,9 +67,9 @@
 <body>
     <nav class="navbar">
     <ul class="nav-links">
-      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#">Projects</a></li>
-      <li><a href="bio.html">Bio</a></li>
+      <li><a href="bio.html" class="active">Bio</a></li>
       <li><a href="https://drive.google.com/file/d/1zK-V6wiQ66ybcEyTerjuPo0Z_oLqxKnx/view?usp=sharing"  target="_blank">CV</a></li>
     </ul>
     </nav>
