--- a/bio.html
+++ b/bio.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bio</title>
+     <link href='https://fonts.googleapis.com/css?family=Labrada' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <style>
         * {
         margin: 0;
@@ -13,13 +15,17 @@
 
         body {
         font-family: lato;
-        color: #fff;
-        background: #000000;
+        color: black;
+        background: #A78989;
         display: flex;
         flex-direction: column;
         align-items: center;
         line-height: 1;
         }  
+
+        html, body {
+          overflow-x: hidden;
+        }
 
         /* Navbar styling */
         .navbar {
@@ -50,14 +56,66 @@
         background: rgba(255, 255, 255, 0.15);
         }
 
+        /* Background circles inside scrollable flow */
+.background-circles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  pointer-events: none;
+  z-index: -1;
+}
+
+.circle {
+  position: absolute;
+  border-radius: 80%;
+  filter: blur(80px);
+  opacity: 0.7;
+}
+
+.circle1 {
+  width: 200px;
+  height: 200px;
+  background-color: #ffffff;
+  top: -100px;
+  right: -100px;
+   overflow: hidden;
+  animation: moveAcross 20s ease-in-out infinite alternate;
+}
+
+@keyframes moveAcross {
+  0% {
+    transform: translate(0, 0);
+  }
+    20% {
+        transform: translate(-30vw, 60vh);
+    }
+  100% {
+    transform: translate(-100vw, 80vh);
+  }
+}
+        
+
+
+
+        /* Navbar styling */
+        .navbar {
+        margin-top: 20px;
+        position: fixed;
+        top: 0;
+        z-index: 999; 
+        }
+
         /* Bio text section */
         h1 {
         font-family: Labrada;
         font-size: 2.5em;
         margin-bottom: 20px;
+        padding: 150px 20px 20px;
+        font-weight: 200;
         }  
         p {
-        font-size: 1.2em;
+        font-size: 1em;
         margin: 10px 0;
         max-width: 600px;
         text-align: center;
@@ -68,7 +126,7 @@
     <nav class="navbar">
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="#">Projects</a></li>
+      <li><a href="index.html#projects">Projects</a></li>
       <li><a href="bio.html" class="active">Bio</a></li>
       <li><a href="https://drive.google.com/file/d/1zK-V6wiQ66ybcEyTerjuPo0Z_oLqxKnx/view?usp=sharing"  target="_blank">CV</a></li>
     </ul>
@@ -77,5 +135,9 @@
     <p>My name is Rumaysa Fatima, and I am a UI/UX design student with a passion for creating intuitive and engaging user experiences. I have a strong background in design principles and a keen eye for detail, which allows me to craft visually appealing interfaces that are also functional.</p>
     <p>I believe that good design is not just about aesthetics, but also about understanding the needs of users and solving their problems effectively. My goal is to create designs that not only look great but also enhance usability and accessibility.</p>
     <p>Feel free check out my portfolio for more of my work!</p>
+
+    <div class="background-circles">
+      <div class="circle circle1"></div>
+    </div>
 </body>
 </html>
